Fixes robots page on mobile

--- a/src/styles/components/_page.modules.scss
+++ b/src/styles/components/_page.modules.scss
@@ -120,52 +120,61 @@
     z-index: 3;
   }
 
-  .robot-info-left {
-    //margin-top: 8%;
-    margin-left: 5%;
-    margin-right: 5%;
-    position: relative;
-    display: flex;
-    justify-content: center;
+.robot-info-left {
+  margin-left: 5%;
+  margin-right: 5%;
+  position: relative;
+
+  // Default: Desktop Layout (image and text side by side)
+  display: flex;
+  justify-content: center;
+
+  p {
+    text-align: left;
+    padding: 2%;
+  }
+
+  h3 {
+    color: var.$color-foreground;
+    padding-top: 12%;
+    font-size: 100%;
+  }
+
+  img {
+    margin: 50px;
+    margin-top: 0%;
+    width: 50%;
+    height: auto;
+    border-radius: 2%;
+    filter: drop-shadow(0px 0px 15px var.$color-foreground);
+    transition: filter 0.5s;
+  }
+
+  img:hover {
+    filter: drop-shadow(0px 0px 25px var.$color-foreground);
+  }
+
+  // Mobile Layout (image on top, text below)
+  @media (max-width: 768px) {
+    flex-direction: column; // Stack items vertically
+    align-items: center;   // Center items horizontally
+
+    img {
+      width: 100%; // Full width for mobile
+      margin: 0;   // Remove margin to ensure proper spacing
+    }
+
+    h3 {
+      font-size: 90%; // Slightly smaller text size for mobile
+      margin-top: 5%;
+    }
+
     p {
-      text-align: left;
-      float: right;
-      padding: 2%;
-    }
-
-    h3 {
-      color: var.$color-foreground;
-      padding-top: 12%;
-      font-size: 100%;
-    }
-
-    img {
-      float: left;
-      margin: 50px;
-      margin-top: 0%;
-      width: 100%;
-      height: auto;
-      filter: drop-shadow(0px 0px 15px var.$color-foreground);
-      transition: filter 0.5s;
-      border-radius: 2%;
-    }
-
-    img:hover {
-      filter: drop-shadow(0px 0px 25px var.$color-foreground);
-    }
-
-    h3 {
-      color: var.$color-foreground;
-    }
-
-    img {
-      float: right;
-      margin: 50px;
-      margin-top: 0%;
-      width: 50%;
-      height: auto;
+      text-align: center; // Center-align text for mobile
+      font-size: 90%;
     }
   }
+}
   #logo-effect {
     height: 800px;
     width: 900px;
